# nba_data_platform

./: .env.example  .gitignore  CHECKLIST.md  README.md  pyproject.toml
app/: README.md  court.py  queries.py  streamlit_app.py
data/: README.md
infra/: .gitignore  README.md  apply-output.txt  main.tf  outputs.tf  variables.tf
ingestion/: Dockerfile  README.md  __init__.py  common.py  download_tracking.py  fetch_pbp.py  games.csv  parse_dims.py  parse_shot_locations.py  parse_tracking.py
notebooks/: README.md
schema/: CHANGES.md  README.md  er_diagram.md
tests/: test_parse_tracking.py
transform/: README.md  gold_events_with_location.sql  silver_dims.sql  silver_pbp.sql  silver_shot_location.sql  silver_tracking.sql
